--- a/style.css
+++ b/style.css
@@ -123,48 +123,73 @@ li {
 
 /* HERO SECTION END  */
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 480px) {
 
     #home-btns {
         display: none;
     }
     #nav-bar {
         display: flex;
-        margin: auto;
-        justify-content: space-between;
-        margin: 10px 30px 0 30px;
-        padding: 15px;
+        /* margin: auto; */
+        /* justify-content: space-around; */
+        margin: 10px 2px 0 2px;
+        padding: 10px;
+    }
+
+    #nav-bar img {
+        width: 50%;
     }
 
     .login-section {
-        gap: 20px;
+        gap: 10px;
+    }
+
+    .login-section a {
+        font-size: 12px;
     }
     
     .btn {
-        padding: 8px;
-        font-size: 12px;
+        padding: 5px;
+        font-size: 8px;
     }
 
     #hero-section {
         margin-top: 5px;
+        margin: 0 45px;
+        gap: 40px;
     } 
 
     #hero-section img {
-        width: 80%;
-        margin-top: 50px;
+        width: 90%;
+        margin-top: 100px;
     }
 
     .hero-text h1{
         font-weight: 600;
-        font-size: 30px;
+        font-size: 20px;
         color: #4D4D4D;
     }
 
     .hero-text h2{
         font-weight: 600;
-        font-size: 30px;
+        font-size: 20px;
         margin-top: 0px;
         color: #4CAF4F;
+    }
+
+    .her0-text h5 {
+        font-size: 2px;
+        font-weight: 300;
+    }
+
+    #hero-section button {
+        padding: 10x 10px 10px 10px;
+        font-size: 12px;
+        background-color: #4CAF4F;
+        color: white;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
     }
 
 
