--- a/style.css
+++ b/style.css
@@ -128,10 +128,15 @@ li {
     #home-btns {
         display: none;
     }
+
+    header {
+        margin: 10px -40px;
+    }
+
     #nav-bar {
         display: flex;
-        /* margin: auto; */
-        /* justify-content: space-around; */
+        margin: auto;
+        justify-content: space-around;
         margin: 10px 2px 0 2px;
         padding: 10px;
     }
@@ -145,7 +150,7 @@ li {
     }
 
     .login-section a {
-        font-size: 12px;
+        font-size: 10px;
     }
     
     .btn {
@@ -154,14 +159,14 @@ li {
     }
 
     #hero-section {
-        margin-top: 5px;
-        margin: 0 45px;
-        gap: 40px;
+        /* margin-top: 5px; */
+        margin: -25px 35px;
+        gap: 50px;
     } 
 
     #hero-section img {
-        width: 90%;
-        margin-top: 100px;
+        width: 100%;
+        margin-top: 80px;
     }
 
     .hero-text h1{
@@ -177,9 +182,10 @@ li {
         color: #4CAF4F;
     }
 
-    .her0-text h5 {
-        font-size: 2px;
-        font-weight: 300;
+    .hero-text h5 {
+        font-size: 12px;
+        font-weight: 500;
+        margin-bottom: 17px;
     }
 
     #hero-section button {
@@ -191,7 +197,6 @@ li {
         border-radius: 5px;
         cursor: pointer;
     }
-
 
 
 }
