--- a/style.css
+++ b/style.css
@@ -15,9 +15,10 @@ body {
     display: flex;
     margin: auto;
     justify-content: space-around;
-    margin-top: 20px;
-    padding: 15px;
+    /* margin-top: 20px; */
+    padding: 30px 0;
     align-items: center;
+    background-color: #F5F7FA;
 }
 
 nav ul {
@@ -83,7 +84,9 @@ li {
     /* justify-content: center; */
     justify-content: space-around;
     /* gap: 120px; */
-    margin: 80px 70px 0 70px;
+    /* margin: 80px 0 0 0; */
+    padding: 80px 25px 70px 25px;
+    background-color: #F5F7FA;
 }
 
 #hero-section button {
@@ -115,17 +118,261 @@ li {
 }
 
 .hero-text h5 {
-    font-weight: 500;
-    margin: 10px 0 30px 0;
+    font-weight: 600;
+    font-size: 15px;
+    margin: 15px 0 30px 0;
     color: #717171;
 }
 
 
 /* HERO SECTION END  */
 
+/* COMMUNITY SECTION  */
+
+#community {
+    text-align: center;
+    padding: 50px 180px 200px 180px;
+}
+
+.comm-header {
+    font-size: 20px;
+    margin-bottom: 30px;
+}
+
+.comm-header .p {
+    color: #717171;
+}
+
+.comm-header h1 {
+    color: #4D4D4D;
+}
+
+.comm-house {
+    max-width: 27%;
+    margin: auto;
+    padding: 20px 0 20px 0;
+    box-shadow: 0 2px 5px 2px #00000009;
+    /* border-color: 10px #4CAF4F; */
+    /* border: solid #4caf4f2b; */
+    /* margin-top: 50px; */
+}
+
+.comm-house h2 {
+    color: #4D4D4D;
+}
+
+.comm-house p {
+    color: #717171;
+}
+
+.comm-text {
+    text-align: center;
+}
+
+.comm {
+    display: flex;
+    gap: 100px;
+}
+
+/* COMMUNITY END */
+
+/* UNLOCK SECTION */
+
+#unlock {
+    display: flex;
+    margin-top: 100px;
+}
+
+.unlock-text {
+    text-align: left;
+    
+}
+
+.unlock-text h1, p {
+    margin-bottom: 20px;
+}
+
+.unlock-text h1 {
+    max-width: 65%;
+}
+
+    #unlock button {
+    padding: 10px 30px 10px 30px;
+    font-size: 15px;
+    color: white;
+    background-color: #4CAF4F;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+/* UNLOCK END  */
+
+/* ACHIEVEMENTS  */
+
+    /* #achievements {
+        max-width: 100%;
+        background-color: #F5F7FA;
+        padding: 40px;
+        display: flex;
+        justify-content: space-between;
+        gap: 150px;
+    }
+
+    .ach-stat {
+        display: flex;
+        gap: 15px;
+    } */
+
+/* ACHIEVEMENTS END  */
+
 @media screen and (max-width: 480px) {
 
     #home-btns {
+        display: none;
+    }
+
+    header {
+        margin-right: -50px;
+        
+    }
+
+        #nav-bar {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 15px 20px;
+        background-color: #F5F7FA;
+        position: relative;
+        width: 100%;
+    }
+
+    #nav-bar img {
+        width: 50%;
+    }
+
+    .login-section {
+        gap: 10px;
+    }
+
+    .login-section a {
+        font-size: 10px;
+    }
+    
+    .btn {
+        padding: 5px;
+        font-size: 8px;
+    }
+
+    #hero-section {
+        margin-top: -20px;
+        padding: 0 40px 20px 25px;
+        gap: 30px;
+    } 
+
+    #hero-section img {
+        width: 100%;
+        margin-top: 80px;
+    }
+
+    .hero-text h1{
+        font-weight: 600;
+        font-size: 20px;
+        color: #4D4D4D;
+    }
+
+    .hero-text h2{
+        font-weight: 600;
+        font-size: 20px;
+        margin-top: 0px;
+        color: #4CAF4F;
+    }
+
+    .hero-text h5 {
+        font-size: 12px;
+        font-weight: 500;
+        margin-bottom: 17px;
+    }
+
+    #hero-section button {
+        padding: 10x 10px 10px 10px;
+        font-size: 12px;
+        background-color: #4CAF4F;
+        color: rgb(255, 255, 255);
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+    }
+
+    #community {
+        padding: 30px;
+        padding: 0 40px 20px 25px;
+    }
+
+    .comm-header {
+        font-size: 12px;
+    }
+
+    .comm {
+        flex-direction: column;
+    }
+
+    .comm-house {
+        text-align: center;
+        align-items: center;
+        margin-bottom: -100px;
+        max-width: 90%;
+    }
+
+    .comm-house img {
+        width: 20%;
+    }
+
+    .comm-house h2 {
+        font-size: 18px;
+    }
+
+    .comm-house p {
+        font-size: small;
+    }
+
+    .comm-header h1 {
+        font-size: 22px;
+        line-height: -200px;
+    }
+
+    #unlock {
+        flex-direction: column;
+        justify-content: center;
+        text-align: center;
+    }
+    
+    #unlock img {
+        width: 200px;
+        margin-top: 50px;
+    }
+    .unlock-text {
+        justify-items: center;
+        text-align: center;
+    }
+
+    #unlock p {
+        font-size: 10px;
+        padding: 0 10px 0 10px;
+    }
+
+    #unlock h1 {
+        font-size: 20px;
+    }
+
+
+
+
+}
+
+@media screen and (max-width: 1024px) {
+
+     #home-btns {
         display: none;
     }
 
@@ -147,6 +394,7 @@ li {
 
     .login-section {
         gap: 10px;
+        padding-right: 18px;
     }
 
     .login-section a {
@@ -159,9 +407,10 @@ li {
     }
 
     #hero-section {
-        /* margin-top: 5px; */
-        margin: -25px 35px;
-        gap: 50px;
+        margin-top: -20px;
+        /* margin: -25px 35px; */
+        padding: 0 40px 20px 25px;
+        gap: 30px;
     } 
 
     #hero-section img {
@@ -197,10 +446,5 @@ li {
         border-radius: 5px;
         cursor: pointer;
     }
-
-
-}
-
-@media screen and (max-width: 1024px) {
 
 }
